@@ -161,20 +161,18 @@ if [ x"USE_VALGRIND" != x ] || [ x"WITH_VALGRIND" != x ]; then
     valgrind="$VALGRIND"
     valgrind_args="$VALGRIND_ARGS --log-file-exactly=$bprog.valgrind.log"
     use_valgrind='yes'
-  fi
-
-  # Are we about to run a script?
-  if [ x"`sed '1s/^\(..\).*/\1/;q' $prog`" = 'x#!' ]; then
-    # Libtool often generates a script instead of an executable, let's see if
-    # it's the case
-    if (grep -i 'generated by ltmain' $prog) >/dev/null 2>/dev/null; then
-      valgrind_libtool='yes'
-      sed "/ 	*exec .*progdir.*program/ s/exec/& $VALGRIND $valgrind_args/" \
-        $prog >$prog.run_valgrind || { echo "$0: Internal error" >&2; exit 1; }
-      chmod a+x $prog.run_valgrind
+    # Are we about to run a script?
+    if [ x"`sed '1s/^\(..\).*/\1/;q' $prog`" = 'x#!' ]; then
+      # Libtool often generates a script instead of an executable, let's see if
+      # it's the case
+      if (grep -i 'generated by ltmain' $prog) >/dev/null 2>/dev/null; then
+        valgrind_libtool='yes'
+        sed "/ 	*exec .*progdir.*program/ s/exec/& $VALGRIND $valgrind_args/" \
+          $prog >$prog.run_valgrind || { echo "$0: Internal error" >&2; exit 1; }
+        chmod a+x $prog.run_valgrind
+      fi
     fi
   fi
-
 fi
 
 # default values
